--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
   --foreground: #171717;
   --primary: #b4740c;
   --secondary: #d89523;
+  --bright: #a76905;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,5 +18,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-roboto), system-ui, sans-serif;
 }
